package tp2.clases.exceptions;

public class InvalidNumberOfPlayersException extends RuntimeException {
}
