package tp2.clases.exceptions;

public class UserNameAlreadyExistsException extends RuntimeException{
}
